[package]
name = "life-progress-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace] 
members = [ 
  "crates/lifespan-crawler",
  "crates/life-progress-core"
]

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
serde = "1.0.196"
serde_json = "1.0.113"
lifespan_crawler = { path = "./crates/lifespan-crawler" }
life_progress_core = { path = "./crates/life-progress-core" }
colored = "2.1.0"
